--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -45,11 +45,13 @@
         <div class="inner" id="about-me-inner">
             <h1>Marlynn Cadena</h1>
             <h2>Software Engineer</h2>
-            <p>Hello World! I am Marlynn Cadena a Full Stack Developer based in Texas. Previously, I have had roles as Microbiolgist working on different infectious disease research projects.
-                From the lab setting, I transitioned into teaching at a high school that partnered with a local community college to increase secondary education access to a promiently minority community. 
-                My passion and experiance in a STEM related field encouraged my curiousity and drove my decision to transition into Software Engineering.
+            <p>Hello World! ! My name is Marlynn Cadena, and I am a Full Stack Developer based in the great state of Texas. Prior to my career in tech, I worked as a Microbiologist, where I was involved in various infectious disease research projects. After spending some time in the lab, I moved on to teach at a high school that was dedicated to providing better education access to a minority community by partnering with a local community college.
+
+              During my time as an educator, my passion and experience in STEM-related fields fueled my curiosity and eventually led me to transition into Software Engineering. I'm thrilled to be able to bring my skills and knowledge from my previous roles to the tech industry and to continue learning and growing as a developer.
+              
+              Thank you for taking the time to read my introduction, and I look forward to connecting with others in this exciting and dynamic field!
             </p>
-            <p>I am excited to combine the skills I learned for my previous roles with Software Engineering. </p>
+            <p>I Thank you for taking the time to read my introduction, and I look forward to connecting with others in this exciting and dynamic field! </p>
             <a href="https://www.linkedin.com/in/marlynn-cadena/" style="color:#212529;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
               </svg></a>
